# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import usersRouter from "./users";
 import booksRouter from "./books";
 import importUrlRouter from "./import-url";
+import reservationsRouter from "./reservations";
 import mylistRouter from "./mylist";
 import borrowRouter from "./borrow";
 import monitoringRouter from "./monitoring";
@@ -15,6 +16,7 @@ router.use(authRouter);
 router.use(usersRouter);
 router.use(booksRouter);
 router.use(importUrlRouter);
+router.use(reservationsRouter);
 router.use(mylistRouter);
 router.use(borrowRouter);
 router.use(monitoringRouter);
